[gd_scene load_steps=42 format=2]

[ext_resource path="res://Assets/boss/Bringer-of-Death-SpritSheet.png" type="Texture" id=1]
[ext_resource path="res://Boss.gd" type="Script" id=2]
[ext_resource path="res://Assets/bar_background.png" type="Texture" id=3]
[ext_resource path="res://Assets/health_bar.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 0, 190, 140, 95 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 140, 190, 140, 95 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 280, 190, 140, 95 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 420, 190, 140, 95 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 560, 190, 140, 95 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 700, 190, 140, 95 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 840, 190, 140, 95 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 980, 190, 140, 95 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 0, 285, 140, 95 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 140, 285, 140, 95 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 420, 285, 140, 95 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 700, 285, 140, 95 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 840, 285, 140, 95 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 0, 380, 140, 95 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 140, 380, 140, 95 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 280, 380, 140, 95 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 420, 380, 140, 95 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 1 )
region = Rect2( 560, 380, 140, 95 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 700, 380, 140, 95 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 1 )
region = Rect2( 840, 380, 140, 95 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 1 )
region = Rect2( 310, 0, 10, 95 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 1 )
region = Rect2( 140, 285, 140, 95 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 1 )
region = Rect2( 280, 285, 140, 95 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 1 )
region = Rect2( 420, 285, 140, 95 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 1 )
region = Rect2( 560, 285, 140, 95 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 140, 106 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 1 )
region = Rect2( 140, 0, 140, 106 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 140, 106 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 1 )
region = Rect2( 420, 0, 140, 106 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 1 )
region = Rect2( 560, 0, 140, 106 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 1 )
region = Rect2( 700, 0, 140, 106 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 1 )
region = Rect2( 840, 0, 140, 106 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 1 )
region = Rect2( 980, 0, 140, 106 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": false,
"name": "cutenemy",
"speed": 8.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": false,
"name": "deadenemy",
"speed": 8.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "hurtenemy",
"speed": 5.0
}, {
"frames": [ SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ) ],
"loop": true,
"name": "idleenemy",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=48]
radius = 20.9288

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 5.45455, 15.9091 )

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 44.5455, 15.9091 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 1.1, 1.1 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -24.5455, -11.8182 )
scale = Vector2( 0.7, 0.693 )
frames = SubResource( 1 )
animation = "cutenemy"
playing = true

[node name="HurtArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2( 0, -3.63636 )
shape = SubResource( 48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.909091, -1.36364 )
shape = SubResource( 49 )

[node name="CutArea" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CutArea"]
position = Vector2( 8.66977e-07, -0.909091 )
shape = SubResource( 50 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -15.4545
margin_top = -27.2727
margin_right = 104.545
margin_bottom = -8.27272
rect_scale = Vector2( 0.3, 0.319 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
